<resources>
    <string name="app_name">CityAppFinder</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome to</string>
    <string name="terms_condition_headings"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_condition_text">"YOUR ACCEPTANCE OF THIS AGREEMENT: This is an agreement between you and IDEAS HUB, a company incorporated with its registered office at Allahabad that governs your use of the search services offered by CityApp through its website www.cityappindia.in. "</string>
    <string name="tc_accept"><u>I accept the terms and condition</u></string>
    <string name="continue_string">Continue</string>
    <string name="promo_text">Startup India Project</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="see_first_string">See First</string>
    <string name="have_account_string">Already have an account?</string><!--Modified as part of enhancement-->
    <string name="have_account_string_link"><u>Already have an account?</u></string><!--Modified as part of enhancement-->
    <string name="hint_phone_number">Mobile Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="male">\u0020\u0020Male</string>
    <string name="female">\u0020\u0020Female</string>
    <string name="sign_in_string">Sign In</string>
    <string name="forget_password_string"><u>Forget Password?</u></string>
    <string name="new_user_string"><u>Are you new user?</u></string>
    <string name="call_now_string">Call Now</string>
    <string name="post_ad_string">Advertise with Us</string>
    <string name="post_business_string">Post a Business</string>
    <string name="profile_string">Profile</string>
    <string name="search_hint">Find here (eg: Ideas Hub)</string>
    <string name="update_string">Update</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_company_name">Company Name*</string>
    <string name="hint_contact_person">Contact Person*</string>
    <string name="hint_district_name">District</string>
    <string name="hint_mobile_number">Mobile No*</string>
    <string name="submit_string">Submit</string>
    <string name="search_filter_title">Filter by location</string>
    <string name="gallery_string">Gallery</string>
    <string name="web_string">Web</string>
    <string name="map_string">Map</string>
    <string name="rate_string">Rate Now</string>
    <string name="no_data">N\\A</string>
    <string name="apply_string">Apply</string>
    <string name="you_string">You</string>
    <string name="away_string">away</string>
    <string name="distance_demo_string">15KM</string>
    <string name="verification_string">We have sent a verification code to your mobile number.</string>
    <string name="verification_hint">Verification code</string>
    <string name="resend_code_string"><u>Resend Verification Code</u></string>
    <string name="verification_heading">Verification</string>
    <string name="verification_body">Your verification has been completed</string>
    <string name="code_resend_heading">Code Resend</string>
    <string name="code_resend_body">A new verification code will be sent</string>
    <string name="hint_mobile_number_">Mobile Number</string>
    <string name="reset_code">Reset</string>
    <string name="password_reset_heading">Password Reset</string>
    <string name="password_reset_body">Your password has been reset</string>
    <string name="hint_comment">Comment</string>
    <string name="comment_hint">Comment</string>
    <string name="empty_filed">Filed is empty</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="invalid_password">Password must be of 6 character</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="mobile_country_code">91</string>
    <string name="no_website">Website is not available</string>
    <string name="no_email">No email address</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_text"><![CDATA[Please check your internet connection & try again]]></string>
    <string name="retry_string">Retry</string>
    <string name="exit_string">Exit</string>
    <string name="exit_heading">Log out</string>
    <string name="exit_text">Do you want to log out?</string>
    <string name="cancel_string">Cancel</string>
    <string name="sign_in_text">You have to sign in first!</string>
    <string name="location_not_found">Location unavailable</string>
    <string name="sign_in_failure">Invalid mobile number or password</string>
    <string name="error_text">Server error! Please try again later.</string>
    <string name="profile_update_success">Profile updated successfully</string>
    <string name="profile_update_failure">Profile update failed</string>
    <string name="phone_dialog_title">Make a Call</string>
    <string name="no_value">No result found</string>
    <string name="no_gps">No GPS!</string>
    <string name="no_gps_message">Please turn on gps for map feature</string>
    <string name="no_gps_positive_text">Turn on</string>
    <string name="no_gps_negative_text">Not now</string>
    <string name="dummy_comment">I enjoyed the card aspect and the gameplay, but was left at the loading screen after finishing the 2nd mission (1st after the tutorial)
        . No way to contact support, even after rebooting the game.</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="no_rating_error_string">You\'ve to rate first!</string>
    <string name="hotline_call_text">Are you sure you want to call CityApp Help Line \'+918601894895\' ?</string>
    <string name="hotline_call_heading">Hotline</string>
    <string name="google_map_v2_key">AIzaSyDofe3hEZeyAi8w9-XgEsNvF0l4JWjimu8</string>
    <string name="no_call_feature">Sorry! Your device does not support calling feature!</string>
    <string name="title_activity_home">Home</string>
    <string name="post_business_successful">Business created successfully</string>
    <string name="dummy_company_name">IDEAS HUB</string>
    <string name="dummy_company_contact_number">+91 9415338665,+91 9519361777,+91 9519362777</string>
    <string name="dummy_company_address">Civil Lines Allahabad</string>
    <string name="dummy_web">www.cityappindia.in</string>
    <string name="dummy_email">cityappindia@gmail.com</string>
    <string name="click_to_enter">Click to enter</string>
    <string name="utilities">UTILITIES</string>
    <string name="city_administration">CITY\nADMINISTRATION</string>
    <string name="services">SERVICES</string>
    <string name="shop_amp_dine"><![CDATA[SHOP & DINE]]></string>
    <string name="fun_amp_frolics"><![CDATA[FUN & FROLICS]]></string>
    <string name="quickpay">TAP &amp; PAY</string>
    <string name="welcome_guest">Welcome guest. Please&#160;</string>
    <string name="refer_friends_and_earn_money">Refer friends and earn money.\nJoin <b>CITY-CONNECT</b></string>
    <string name="city_connect">CITY CONNECT</string>
    <string name="city_connect_desc">Add Your Business, Service, Place or Contact. Activate BHIM - Govt. of India Payment App - Get Rs.10.</string>
    <string name="refer_to_friends_earn"><![CDATA[Refer to Friends & Earn]]></string>
    <string name="report_issue">REPORT ISSUE</string>
    <string name="report_issue_desc">Report Issue Text</string>
    <string name="citizen_corner">Citizen Corner</string>
    <string name="read_more">Read more</string>
    <string name="helpline">HELPLINE</string>
    <string name="helpline_desc">Helpline description text that is more than one line in length.</string>
    <string name="all_in_your_city">All in Your City</string>
    <string name="alerts">ALERTS</string>
    <string name="alerts_desc">Some alerts related to city events will be displayed here.</string>
    <string name="notices">NOTICES</string>
    <string name="notices_desc">Notices description.</string>
    <string name="login"><u>login</u>.</string>

</resources>