<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/promoScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/promoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/app_wallpaper"/>

    </ScrollView>

    <ImageView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_skip"
        android:clickable="true" />


    <TextView
        android:id="@+id/promoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promo_text"
        android:textSize="@dimen/value_15sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_below="@+id/promoLogoIv"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/value_10dp"/>

    <ImageView
        android:id="@+id/promoLogoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_promo_2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnDeepSelection"
        android:text="@string/sign_up_string"
        android:layout_above="@+id/btnSeeFirst"
        android:layout_marginRight="@dimen/value_20dp"
        android:layout_marginLeft="@dimen/value_20dp"/>

    <TextView
        android:id="@+id/btnSeeFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnFillSelection_whiteStroke"
        android:text="@string/see_first_string"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/value_20dp"
        android:layout_marginBottom="@dimen/value_30dp"
        android:layout_marginRight="@dimen/value_20dp"
        android:layout_marginLeft="@dimen/value_20dp"/>

    <TextView
        android:id="@+id/btnHaveAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnSkip"
        android:maxLines="2"
        android:text="@string/have_account_string"
        android:textColor="@android:color/white"
        android:textSize="@dimen/value_15sp"/>

    <TextView
        android:id="@+id/btnClickToEnterTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSkip"
        android:maxLines="2"
        android:text="@string/click_to_enter"
        android:textColor="@android:color/white"
        android:textSize="@dimen/value_15sp" />

</RelativeLayout>
