<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_wallpaper_2"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_promo_2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/promoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo_text"
            android:textSize="@dimen/value_15sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/value_10dp"
            android:layout_marginTop="@dimen/value_20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/value_20dp"
        android:layout_marginBottom="@dimen/value_10dp">

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnDeepSelection"
            android:text="@string/sign_up_string"
            android:layout_marginBottom="@dimen/value_20dp" />

        <TextView
            android:id="@+id/btnSeeFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnFillSelection_whiteStroke"
            android:text="@string/see_first_string"
            android:layout_marginBottom="@dimen/value_20dp" />

        <TextView
            android:id="@+id/btnHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:maxLines="2"
            android:text="@string/have_account_string"
            android:textColor="@android:color/white"
            android:textSize="@dimen/value_15sp" />

    </LinearLayout>


</RelativeLayout>