<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verification_activity_bg_color">

    <ImageView
        android:id="@+id/crossImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="@dimen/value_20dp"
        android:src="@drawable/ic_cross_normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/value_40dp"
        android:paddingRight="@dimen/value_40dp">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/value_10dp"
            android:text="Hi User"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/value_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_string"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/value_18sp" />

        <com.audacityit.finder.util.FloatLabel
            android:id="@+id/etVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:hint="@string/verification_hint"
            android:inputType="number"
            android:textColorHint="@color/hint_color_green" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/value_30dp"
            android:layout_marginTop="@dimen/value_5dp"
            android:background="@color/post_business_bar_color" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnDeepSelection"
            android:layout_marginBottom="@dimen/value_20dp"
            android:text="@string/submit_string"/>

        <TextView
            android:id="@+id/btnResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/resend_code_string"
            android:textColor="@color/green_color"
            android:textSize="@dimen/value_18sp" />


    </LinearLayout>


</RelativeLayout>